<resources>
    <string name="app_name">Petofy OPHR</string>
    <string name="email">example@xyz.com</string>
    <string name="password">* * * * * * *</string>
    <string name="Register_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phoneNumber">Phone</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="forgetPass"><u>Forget Password</u></string>
    <string name="alreadyHaveAccount">Already Have Account ?</string>
    <string name="createAnAccount">Create An Account</string>
    <string name="dontHaveAccount">Don\'t Have An Account ?</string>
    <string name="petofy">PETOFY</string>
    <string name="CheckInternet">Check your internet connection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="Security">Security</string>
    <string name="update_profile">Veterinarian Account</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="website">Website</string>
    <string name="social_media_url">Social Media URL</string>
    <string name="vet_registration_number">Vet Registration Number</string>
    <string name="vet_qualification">Vet Qualification</string>
    <string name="updateProfile">Update Profile</string>
    <string name="updateProfileButton">Update Profile</string>
    <string name="submit">Submit</string>
    <string name="changePass">Change Password</string>
    <string name="petId">Pet Id</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="petGender">Gender</string>
    <string name="petParent">Pet Parent</string>
    <string name="petname">Pet Name</string>
    <string name="nature_of_visits">Nature Of Visit*</string>
    <string name="color">Color</string>
    <string name="petcolor"><![CDATA[Brown & White]]></string>
    <string name="viewReports">View Reports</string>
    <string name="viewDetails">View details</string>
    <string name="reports">RECORDS</string>
    <string name="register_pets">Pet Register</string>
    <string name="register_pets_home">PET REGISTER</string>
    <string name="add_pet">ADD PET</string>
    <string name="pet_details">PET DETAILS</string>
    <string name="selectReports">Select Reports</string>
    <string name="petownwer">Pet Parent</string>
    <string name="double_Dot">:</string>
    <string name="xrayReport">Test/X-Ray Report</string>
    <string name="xrayReport_toolbr">X-RAY REPORT</string>
    <string name="labTestReport">Lab Test Report</string>
    <string name="Hospitalization"><![CDATA[Hospitalization]]></string>
    <string name="clinicVisits">Clinic Visit Report</string>
    <string name="emailtext">Email</string>
    <string name="appointments">Appointments</string>
    <string name="appointments_home">APPOINTMENTS</string>
    <string name="staff">Your Staff</string>
    <string name="allpets">ALL PETS</string>
    <string name="allStaff">ALL STAFF</string>
    <string name="permission">PERMISSION</string>
    <string name="add_new_pet">ADD NEW PET</string>
    <string name="add_new_staff">ADD NEW STAFF</string>
    <string name="add_clinic_data">Add Clinic visit</string>
    <string name="name">Name</string>
    <string name="acitivated">Activated</string>
    <string name="add_staff">Add Staff</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="update">Update</string>
    <string name="test_x_ray">Test/X-rays</string>
    <string name="managePet">Manage Pet-labwork</string>
    <string name="recentVisits">Recent Visits</string>
    <string name="printIdCard">Print Id Card</string>
    <string name="immunizationChartLabel">Immunization Chart</string>
    <string name="view_history">View History</string>
    <string name="addNewVisits">Add New Visit</string>
    <string name="addNewVisits_toolbar">ADD NEW VISIT</string>
    <string name="pet_category">Pet Category</string>
    <string name="pet_name">Pet Name</string>
    <string name="veterinarian">Veterinarian*</string>
    <string name="size">Size</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="ParentName">Parent Name</string>
    <string name="save">Save</string>
    <string name="saveButton">SAVE</string>
    <string name="editpet">Edit Pet</string>
    <string name="desc">Description</string>
    <string name="petimages">Pet Images</string>
    <string name="petimagesInfo">(You can add maximum 5 of your pet images)</string>
    <string name="doctorPrescription">Doctor\'s Prescription</string>
    <string name="visit_date">Visit Date</string>
    <string name="natureofvisit">Nature Of Visit</string>
    <string name="weight">Weight (Kg)</string>
    <string name="temprature">Temperature(F)</string>
    <string name="vaccine">Vaccine</string>
    <string name="description">Symptoms</string>
    <string name="description1">Description</string>
    <string name="diagosis">Diagnosis</string>
    <string name="remarks">Treatment Remarks</string>
    <string name="testdate">Test Date</string>
    <string name="testType">Test Type</string>
    <string name="result">Result</string>
    <string name="requestingVet">Requesting Vet</string>
    <string name="vetPhone">Vet Phone</string>
    <string name="labType">Lab Type</string>
    <string name="hospitalType">Hospital Type</string>
    <string name="hospitalname">Hospital Name</string>
    <string name="admissiondate">Admission Date</string>
    <string name="DeleteReport">Delete Report</string>
    <string name="RequestingContact">Requesting Contact</string>
    <string name="resaonoftest">Reason Of Test</string>
    <string name="testName">Test Name</string>
    <string name="labPhone">Lab Phone</string>
    <string name="hospital_type">Hospital Type</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="admission_date">Admission Date</string>
    <string name="resaonofHospitalization">Reason Of Hospitalization</string>
    <string name="diagosisTreatment">Diagnosis Treatment Procedure</string>
    <string name="RecommendedFollowup">Recommended Follow-up</string>
    <string name="FollowupDate">Follow-up Date</string>
    <string name="addTestXRay">Add Test/X-rays</string>
    <string name="manage_pet_lab_work">Manage pet-Lab work</string>
    <string name="addhospitalization">Add Hospitalizations/Surgeries</string>
    <string name="labname">Lab Name</string>
    <string name="dischargeDate">Discharge Date*</string>
    <string name="hospitalphone">Hospital Phone</string>
    <string name="sharing_text">Id Card</string>
    <string name="share_title">Petofy</string>
    <string name="screenshot_take_failed">Failed to take screenshot!!</string>
    <string name="wait">Please wait…</string>
    <string name="full_page_screenshot">Full Page Screenshot</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Custom Page Screenshot</string>
    <string name="profile">Profile</string>
    <string name="profile_home">PROFILE</string>
    <string name="operating_hrs">Operating Hours</string>
    <string name="OnlineAppointment">Online Appointments</string>
    <string name="Online">Online</string>
    <string name="Appointment">Appointments</string>
    <string name="fullProfile">Veterinarian Full Profile</string>
    <string name="Settings">Settings</string>
    <string name="SettingsToolbar">SETTINGS</string>
    <string name="hours">Operating Hours</string>
    <string name="title">Purpose</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="appointmentTime">Appointment Time, Duration (In minutes)</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="Editprofile">Edit Profile</string>
    <string name="EditprofileToolbar">EDIT PROFILE</string>
    <string name="LastPrescription">Last Prescription</string>
    <string name="immunization">Immunization Schedule</string>
    <string name="immunizationtToolbar">IMMUNIZATION SCHEDULE</string>
    <string name="createNew">CREATE NEW</string>
    <string name="primaryVaccineName">Primary Vaccine Name</string>
    <string name="ageGroup">Age Group</string>
    <string name="immunizationChart">Immunization Chart</string>
    <string name="createImmue">Create Immunization</string>
    <string name="serialNumber">Serial Number</string>
    <string name="age_unit">Age Unit</string>
    <string name="miniAge">Minimum Age</string>
    <string name="maxAge">Maximun Age</string>
    <string name="boosterone">Booster One</string>
    <string name="boostertwo">Booster Two</string>
    <string name="isperiodicvaccine">Is Periodic Vaccine</string>
    <string name="VaccinationPeriod">Vaccination Period</string>
    <string name="boosterOneGap">Days gap between Primary and First Booster</string>
    <string name="boosterTwoGap">Days gap between Primary and IInd Booster</string>
    <string name="BankAccount">Bank Account</string>
    <string name="BankAccountToolbar">BANK ACCOUNTS</string>
    <string name="addAccount">Add Bank Account</string>
    <string name="ifsc">IFSC</string>
    <string name="accountNumber">Account Number</string>
    <string name="clinicCode">Clinic Code</string>
    <string name="confirmAccount">Confirm Account Number</string>
    <string name="accountType">Account Type</string>
    <string name="lastvisitDate">Last Visit Date</string>
    <string name="nextVisitDate">Next Visit Date</string>
    <string name="typeOfvisit">Type Of Visit</string>
    <string name="upcominVists">Upcoming Visits</string>
    <string name="upcominVists_toolbar">UPCOMING VISITS</string>
    <string name="allvisits">All Visits\n(Day Wise)</string>
    <string name="allvisits_toolbar">ALL VISITS</string>
    <string name="verify_email">Verify your Email</string>
    <string name="verify_email_msg">We have sent an email to</string>
    <string name="verify_email_deatils">Please click on the link that has just been sent to your registered email id to verify your account and continue the registration process.</string>
    <string name="clinicName">Clinic Name</string>
    <string name="prefix">Prefix</string>
    <string name="qualification">Qualifications</string>
    <string name="regNumber">Registration Number</string>
    <string name="addrecords">Add Records</string>
    <string name="text_paragraph_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_print">Print</string>
    <string name="text_share">Share</string>
    <string name="text_generated_file_error">Generated File is null or does not exist!</string>
    <string name="text_create_test_pdf">Create Test Pdf</string>
</resources>