<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffff"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">



    <ImageView
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/login_resgister_logo"
        android:id="@+id/logoVet"/>

    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/email_section_RL"
        android:layout_below="@id/logoVet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/email_IV"
            android:src="@drawable/mail_24dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_toRightOf="@id/email_IV"
            android:layout_height="wrap_content"
            android:id="@+id/email_TIL">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:paddingRight="45dp"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:hint="@string/email"
                android:id="@+id/email_TIET"/>

        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/email_section_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/password_section_RL">
        <ImageView
            android:id="@+id/password_key_IV"
            android:src="@drawable/password_key_24dp"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/password_key_IV"
            app:passwordToggleEnabled="true"
            android:id="@+id/password_TIL"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/password"
                android:id="@+id/password_TIET"/>

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/password_section_RL"
        android:id="@+id/forgetPass_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgetPass"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_above="@+id/login_BT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dontHaveAccount_TV"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dontHaveAccount"
            android:textColor="#808080" />

        <TextView
            android:gravity="center"
            android:layout_toRightOf="@id/dontHaveAccount_TV"
            android:id="@+id/signUp_TV"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/signUp"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

    </RelativeLayout>




    <Button
        android:background="@color/colorPrimary"
        android:textSize="25dp"
        android:layout_alignParentBottom="true"
        android:theme="@style/MatButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/login_BT"
        android:text="@string/signIn"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:textColor="@color/whiteColor"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</RelativeLayout>