<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="5dp"
        android:background="@color/whiteColor"
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="10dp"
                android:layout_weight="1.5"
                android:id="@+id/pet_deatils_LL"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:id="@+id/petImage_LL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:scaleType="fitXY"
                        android:id="@+id/petImage_IV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/dog"/>

                </LinearLayout>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:id="@+id/middle_LL"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:paddingRight="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/petId"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/pet_id_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="PETO-1883"/>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dateofbirth"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/date_of_birth_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="08/072019"/>



                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:paddingRight="10dp"
                        android:paddingLeft="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/petname"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/pet_name_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Rustam (Male)"/>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/color"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:textColor="#000"/>

                        <TextView
                            android:id="@+id/pet_color_TV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/petcolor"/>



                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


            <Button
                android:text="@string/viewReports"
                android:textColor="@color/whiteColor"
                android:layout_weight="0.5"
                android:id="@+id/view_pet_details_BT"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>



</LinearLayout>
